--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ führenden Glücksspielplattformen in Deutschland entwickelt. Es bietet
 Spielern ein modernes, sicheres und vielseitiges Umfeld, das durch
 Innovation und Transparenz überzeugt. Dank seiner intuitiven
 Benutzeroberfläche, schnellen Ladezeiten und einer riesigen Auswahl an
-Spielen wird PlayJonny Deutschland sowohl von Anfängern als auch von
+Spielen wird <a href="https://play-jonny.com.pt" title="playjonny">PlayJonny</a> Deutschland sowohl von Anfängern als auch von
 erfahrenen Casinospielern geschätzt.</p>
 <p><img src="/images/doc_main/playjonny-%e2%80%93-alles-uber-das-beliebte-online-casino-in-deutschland-1.webp" alt="playjonny" title="playjonny" loading="lazy"></p>
 <p><a href="/play"
