--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ erfahren Sie alles, was Sie über das casino playjonny wissen müssen –
 von der Registrierung über Einzahlungen bis hin zu den besten
 Bonusaktionen und Sicherheitssystemen.</p>
 <p>Mit seiner modernen Softwarearchitektur und stetigen technischen
-Verbesserungen bleibt PlayJonny Online auf dem neuesten Stand der
+Verbesserungen bleibt <a href="https://playjonny.at" title="Play Jonny">Play Jonny</a> Online auf dem neuesten Stand der
 Branche. Es kombiniert Innovation, Spielvielfalt und Zuverlässigkeit,
 was es zu einer ausgezeichneten Wahl für deutsche Spieler macht.</p>
 <h2 id="warum-playjonny-so-beliebt-ist">Warum PlayJonny so beliebt ist</h2>
