--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ erfahrenen Casinospielern geschätzt.</p>
   </aside></p>
 <p>Die Plattform verfolgt das Ziel, jedem Nutzer ein verantwortungsvolles
 und unterhaltsames Spielerlebnis zu ermöglichen. In diesem Leitfaden
-erfahren Sie alles, was Sie über das casino playjonny wissen müssen –
+erfahren Sie alles, was Sie über das casino <a href="https://playjonny.com.de" title="Play Jonny">Play Jonny</a> wissen müssen –
 von der Registrierung über Einzahlungen bis hin zu den besten
 Bonusaktionen und Sicherheitssystemen.</p>
 <p>Mit seiner modernen Softwarearchitektur und stetigen technischen
