--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Verbesserungen bleibt <a href="https://playjonny.at" title="Play Jonny">Play Jon
 Branche. Es kombiniert Innovation, Spielvielfalt und Zuverlässigkeit,
 was es zu einer ausgezeichneten Wahl für deutsche Spieler macht.</p>
 <h2 id="warum-playjonny-so-beliebt-ist">Warum PlayJonny so beliebt ist</h2>
-<p>Der Erfolg von Play Jonny basiert auf mehreren Faktoren: einer riesigen
+<p>Der Erfolg von <a href="https://play-jonny.at" title="playjonny">playjonny</a> basiert auf mehreren Faktoren: einer riesigen
 Spielauswahl, fairen Bedingungen und einer sicheren Umgebung, die sowohl
 Spaß als auch Vertrauen vermittelt. Das Casino bietet eine
 übersichtliche Navigation und ist in mehreren Sprachen verfügbar –
